--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,12 +163,19 @@
     "try:\n",
     "    cur = conn.cursor()\n",
     "    cur.execute(\"\\\n",
-    "select a.creationdate, a.id, a.posttypeid, b.body \\\n",
-    "  from posts a \\\n",
-    "     , postsbody b \\\n",
-    "where a.id = b.id \\\n",
-    "  and a.creationdate between '2013-11-01' and '2023-12-01' \\\n",
-    "; \\\n",
+    "select a.creationdate \\\n",
+    "     , a.id \\\n",
+    "     , a.posttypeid \\\n",
+    "     , a.title \\\n",
+    "     , b.body \\\n",
+    "     , case when c.id is null then 0 else 1 end as answered_yn \\\n",
+    "  from posts as a \\\n",
+    "     inner join postsbody b \\\n",
+    "     on a.id = b.id \\\n",
+    "     left outer join vw_posts_get_answer as c \\\n",
+    "     on a.id = c.id \\\n",
+    "where a.creationdate between '2013-11-01' and '2023-12-01' \\\n",
+    "  ; \\\n",
     "                \" \n",
     "   )\n",
     "    rows = cur.fetchall()\n",
@@ -190,7 +197,9 @@
     "  'creationdate' \n",
     ", 'id' \n",
     ", 'posttypeid'\n",
+    ", 'title'\n",
     ", 'body' \n",
+    ", 'answered_yn'\n",
     "])"
    ]
   },
