--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,6 +167,7 @@
     "     , a.id \\\n",
     "     , a.posttypeid \\\n",
     "     , a.title \\\n",
+    "     , a.owneruserid \\\n",
     "     , b.body \\\n",
     "     , case when c.id is null then 0 else 1 end as answered_yn \\\n",
     "  from posts as a \\\n",
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +199,7 @@
     ", 'id' \n",
     ", 'posttypeid'\n",
     ", 'title'\n",
+    ", 'owneruserid'\n",
     ", 'body' \n",
     ", 'answered_yn'\n",
     "])"
@@ -205,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,6 +262,192 @@
     "# 전체 데이터셋 \n",
     "with open('../../data/df_user.pkl', 'wb') as f:\n",
     "    pickle.dump(df_user, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select to_char(p.creationdate, 'yyyy') as year, p.id, count(a.id) as cnt \\\n",
+    "  from posts p \\\n",
+    "     left join posts a \\\n",
+    "     on p.id = a.parentid \\\n",
+    "     and a.posttypeid = '2' \\\n",
+    "     and a.creationdate - p.creationdate <= '30 days' \\\n",
+    " where ((p.creationdate between '2023-11-01' and '2023-12-01') \\\n",
+    " \t or (p.creationdate between '2022-11-01' and '2022-12-01') \\\n",
+    " \t or (p.creationdate between '2021-11-01' and '2021-12-01') \\\n",
+    " \t or (p.creationdate between '2020-11-01' and '2020-12-01') \\\n",
+    " \t or (p.creationdate between '2019-11-01' and '2019-12-01') \\\n",
+    " \t ) \\\n",
+    "   and p.posttypeid ='1' \\\n",
+    "  group by p.id \\\n",
+    "  ; \\\n",
+    "                \" \n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_answer_cnt = pd.DataFrame(rows, columns = [\n",
+    "  'year' \n",
+    ", 'id'\n",
+    ", 'cnt' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_answer_cnt.pkl', 'wb') as f:\n",
+    "    pickle.dump(df_answer_cnt, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select xx.year, xx.usr_id, count(xx.q_id) as cnt \\\n",
+    "  from ( \\\n",
+    " select x.usr_id, x.usr_creationdate, x.year, p.id as q_id, p.creationdate as q_date \\\n",
+    "   from ( \\\n",
+    "  \tselect u.id as usr_id, u.creationdate as usr_creationdate, m.year \\\n",
+    "     from users u \\\n",
+    "        , ma_year m \\\n",
+    " \twhere to_char(u.creationdate, 'yyyy') <= m.year \\\n",
+    "   \t  and m.year between '2013' and '2023' \\\n",
+    "      and u.id >1 \\\n",
+    "  \t) x \\\n",
+    "   left join posts p \\\n",
+    "   on x.usr_id = p.owneruserid \\\n",
+    "   and p.posttypeid = '1' \\\n",
+    "   and x.year = to_char(p.creationdate, 'yyyy') \\\n",
+    ") xx \\\n",
+    "group by xx.year, xx.usr_id \\\n",
+    "; \\\n",
+    "                \" \n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_usr_q_cnt = pd.DataFrame(rows, columns = [\n",
+    "  'year' \n",
+    ", 'usr_id'\n",
+    ", 'cnt' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_usr_q_cnt.pkl', 'wb') as f:\n",
+    "    pickle.dump(df_usr_q_cnt, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select xx.year, xx.usr_id, count(xx.q_id) as cnt \\\n",
+    "  from ( \\\n",
+    " select x.usr_id, x.usr_creationdate, x.year, p.id as q_id, p.creationdate as q_date \\\n",
+    "   from ( \\\n",
+    "  \tselect u.id as usr_id, u.creationdate as usr_creationdate, m.year \\\n",
+    "     from users u \\\n",
+    "        , ma_year m \\\n",
+    " \twhere to_char(u.creationdate, 'yyyy') <= m.year \\\n",
+    "   \t  and m.year between '2013' and '2023' \\\n",
+    "      and u.id >1 \\\n",
+    "  \t) x \\\n",
+    "   left join posts p \\\n",
+    "   on x.usr_id = p.owneruserid \\\n",
+    "   and p.posttypeid = '2' \\\n",
+    "   and x.year = to_char(p.creationdate, 'yyyy') \\\n",
+    ") xx \\\n",
+    "group by xx.year, xx.usr_id \\\n",
+    "; \\\n",
+    "                \" \n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_usr_a_cnt = pd.DataFrame(rows, columns = [\n",
+    "  'year' \n",
+    ", 'usr_id'\n",
+    ", 'cnt' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_usr_a_cnt.pkl', 'wb') as f:\n",
+    "    pickle.dump(df_usr_a_cnt, f)"
    ]
   }
  ],
