--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,13 +378,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
     "with open('../../data/df_usr_q_cnt.pkl', 'wb') as f:\n",
     "    pickle.dump(df_usr_q_cnt, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select xxx.year, avg(xxx.cnt) as avg cnt \\\n",
+    "  from ( \\\n",
+    "\t\t  select xx.year, xx.usr_id, count(xx.q_id) as cnt \\\n",
+    "\t\t  from (select x.usr_id, x.usr_creationdate, x.year, p.id as q_id, p.creationdate as q_date \\\n",
+    "\t\t   from ( \\\n",
+    "\t\t  \tselect u.id as usr_id, u.creationdate as usr_creationdate, m.year \\\n",
+    "\t\t     from users u \\\n",
+    "\t\t        , ma_year m \\\n",
+    "\t\t \twhere to_char(u.creationdate, 'yyyy') <= m.year \\\n",
+    "\t\t   \t  and m.year between '2013' and '2023' \\\n",
+    "\t\t      and u.id >1 \\\n",
+    "\t\t  \t) x \\\n",
+    "\t\t   left join posts p \\\n",
+    "\t\t   on x.usr_id = p.owneruserid \\\n",
+    "\t\t   and p.posttypeid = '2' \\\n",
+    "\t\t   and x.year = to_char(p.creationdate, 'yyyy') \\\n",
+    "\t\t) xx \\\n",
+    "\t\tgroup by xx.year, xx.usr_id \\\n",
+    "  ) xxx \\\n",
+    " group by xxx.year \\\n",
+    "  ;              \"\n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_usr_a_cnt = pd.DataFrame(rows, columns = [\n",
+    "  'year' \n",
+    ", 'usr_id'\n",
+    ", 'cnt' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m현재 셀 또는 이전 셀에서 코드를 실행하는 동안 Kernel이 충돌했습니다. \n",
+      "\u001b[1;31m셀의 코드를 검토하여 가능한 오류 원인을 식별하세요. \n",
+      "\u001b[1;31m자세한 내용을 보려면 <a href='https://aka.ms/vscodeJupyterKernelCrash'>여기</a>를 클릭하세요. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+     ]
+    }
+   ],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_usr_a_cnt.pkl', 'wb') as f:\n",
+    "    pickle.dump(df_usr_a_cnt, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create table tt_year_from_signup_qna as\n",
+    "# select x.usr_id\n",
+    "#      , p.id as q_id\n",
+    "#      , ceil(DATE_PART('day',p.creationdate::timestamp-x.usr_creationdate::timestamp)/365) as yeardiff\n",
+    "#      , p.creationdate, x.usr_creationdate\n",
+    "#   from (\n",
+    "#         select u.id as usr_id, u.creationdate as usr_creationdate\n",
+    "#           from users u\n",
+    "#          where u.id >1\n",
+    "#         ) x\n",
+    "#         left join posts p\n",
+    "#           on x.usr_id = p.owneruserid\n",
+    "#          and p.posttypeid in( '1', '2')\n",
+    "# ;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select yeardiff, count(q_id) as cnt \\\n",
+    "  from public.tt_year_from_signup_a \\\n",
+    " group by yeardiff \\\n",
+    " ;\"\n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_year_from_signup_a = pd.DataFrame(rows, columns = [\n",
+    "  'yeardiff' \n",
+    ", 'cnt' \n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_year_from_signup_a.pkl', 'wb') as f:\n",
+    "    pickle.dump(df_year_from_signup_a, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select yeardiff, count(q_id) as cnt \\\n",
+    "  from public.tt_year_from_signup_qna \\\n",
+    " group by yeardiff \\\n",
+    " ;\"\n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_year_from_signup_qna = pd.DataFrame(rows, columns = [\n",
+    "  'yeardiff' \n",
+    ", 'cnt' \n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_year_from_signup_qna.pkl', 'wb') as f:\n",
+    "    pickle.dump(df_year_from_signup_qna, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select yeardiff, count(q_id) as cnt \\\n",
+    "  from public.tt_year_from_signup_q \\\n",
+    " group by yeardiff \\\n",
+    " ;\"\n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_year_from_signup_q = pd.DataFrame(rows, columns = [\n",
+    "  'yeardiff' \n",
+    ", 'cnt' \n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_year_from_signup_q.pkl', 'wb') as f:\n",
+    "    pickle.dump(df_year_from_signup_q, f)"
    ]
   },
   {
@@ -397,25 +644,15 @@
     "try:\n",
     "    cur = conn.cursor()\n",
     "    cur.execute(\"\\\n",
-    "select xx.year, xx.usr_id, count(xx.q_id) as cnt \\\n",
+    "select x.yeardiff, avg(x.cnt) as mean_cnt , median(x.cnt) as med_cnt \\\n",
     "  from ( \\\n",
-    " select x.usr_id, x.usr_creationdate, x.year, p.id as q_id, p.creationdate as q_date \\\n",
-    "   from ( \\\n",
-    "  \tselect u.id as usr_id, u.creationdate as usr_creationdate, m.year \\\n",
-    "     from users u \\\n",
-    "        , ma_year m \\\n",
-    " \twhere to_char(u.creationdate, 'yyyy') <= m.year \\\n",
-    "   \t  and m.year between '2013' and '2023' \\\n",
-    "      and u.id >1 \\\n",
-    "  \t) x \\\n",
-    "   left join posts p \\\n",
-    "   on x.usr_id = p.owneruserid \\\n",
-    "   and p.posttypeid = '2' \\\n",
-    "   and x.year = to_char(p.creationdate, 'yyyy') \\\n",
-    ") xx \\\n",
-    "group by xx.year, xx.usr_id \\\n",
-    "; \\\n",
-    "                \" \n",
+    "select a.yeardiff, a.usr_id, count(a.q_id) as cnt \\\n",
+    "  from public.tt_year_from_signup_qna a \\\n",
+    " where a.yeardiff >=0 \\\n",
+    " group by a.yeardiff, a.usr_id \\\n",
+    "  ) x \\\n",
+    " group by x.yeardiff \\\n",
+    " ;\"\n",
     "   )\n",
     "    rows = cur.fetchall()\n",
     "    \n",
@@ -432,11 +669,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_usr_a_cnt = pd.DataFrame(rows, columns = [\n",
-    "  'year' \n",
-    ", 'usr_id'\n",
-    ", 'cnt' \n",
-    "])"
+    "df_year_from_signup_q_mm = pd.DataFrame(rows, columns = [\n",
+    "  'yeardiff' \n",
+    ", 'mean_cnt' \n",
+    ", 'med_cnt'\n",
+    "])\n"
    ]
   },
   {
@@ -446,8 +683,8 @@
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/df_usr_a_cnt.pkl', 'wb') as f:\n",
-    "    pickle.dump(df_usr_a_cnt, f)"
+    "with open('../../data/df_year_from_signup_q_mm.pkl', 'wb') as f:\n",
+    "    pickle.dump(df_year_from_signup_q_mm, f)"
    ]
   }
  ],
