--- a/ba_chatgpt/0_data_extract.ipynb
+++ b/ba_chatgpt/0_data_extract.ipynb
@@ -756,6 +756,85 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# select xx.usr_creationyear, xx.postcreationyear, avg(post_cnt) as avg_post_cnt, median(post_cnt) as med_post_cnt\n",
+    "#   from (\n",
+    "#         select x.usr_creationyear, x.usr_id, x.postcreationyear, sum(post_cnt) as post_cnt\n",
+    "#           from (select a.usr_id, a.postcreationyear, a.posttypeid,a.post_cnt, b.creationyear as usr_creationyear\n",
+    "#           from tt_year_per_post_cnt_01 a\n",
+    "#              , users b\n",
+    "#         where a.usr_id = b.id\n",
+    "#               )x\n",
+    "#         group by x.usr_creationyear, x.usr_id, x.postcreationyear\n",
+    "       \n",
+    "#            ) xx \n",
+    "# group by xx.usr_creationyear, xx.postcreationyear\n",
+    "# ;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select xx.usr_creationyear, xx.postcreationyear, avg(post_cnt) as avg_post_cnt, median(post_cnt) as med_post_cnt \\\n",
+    "  from ( \\\n",
+    "        select x.usr_creationyear, x.usr_id, x.postcreationyear, sum(post_cnt) as post_cnt \\\n",
+    "          from (select a.usr_id, a.postcreationyear, a.posttypeid,a.post_cnt, b.creationyear as usr_creationyear \\\n",
+    "          from tt_year_per_post_cnt_01 a \\\n",
+    "             , users b \\\n",
+    "        where a.usr_id = b.id \\\n",
+    "              )x \\\n",
+    "        group by x.usr_creationyear, x.usr_id, x.postcreationyear \\\n",
+    "           ) xx \\\n",
+    "group by xx.usr_creationyear, xx.postcreationyear \\\n",
+    "; \\\n",
+    "\" \n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'usr_creationyear' \n",
+    ", 'post_creationyear'\n",
+    ", 'avg_post_cnt' \n",
+    ", 'med_post_cnt' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_usr_post_cre_avg_med.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
