--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,6 +1038,213 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select xx.usr_creationyear, xx.postcreationyear, avg(post_cnt) as avg_post_cnt, median(post_cnt) as med_post_cnt \\\n",
+    "  from ( \\\n",
+    "        select x.usr_creationyear, x.usr_id, x.postcreationyear, sum(post_cnt) as post_cnt \\\n",
+    "          from (select a.usr_id, a.postcreationyear, a.posttypeid,a.post_cnt, b.creationyear as usr_creationyear \\\n",
+    "          from tt_year_per_post_cnt_01 a \\\n",
+    "             , users b \\\n",
+    "        where a.usr_id = b.id \\\n",
+    "          and a.posttypeid = '1' \\\n",
+    "              )x \\\n",
+    "        group by x.usr_creationyear, x.usr_id, x.postcreationyear \\\n",
+    "           ) xx \\\n",
+    "group by xx.usr_creationyear, xx.postcreationyear \\\n",
+    "; \\\n",
+    "\" \n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'usr_creationyear' \n",
+    ", 'q_creationyear'\n",
+    ", 'avg_post_cnt' \n",
+    ", 'med_post_cnt' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_usr_q_cre_avg_med.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select xx.usr_creationyear, xx.postcreationyear, avg(post_cnt) as avg_post_cnt, median(post_cnt) as med_post_cnt \\\n",
+    "  from ( \\\n",
+    "        select x.usr_creationyear, x.usr_id, x.postcreationyear, sum(post_cnt) as post_cnt \\\n",
+    "          from (select a.usr_id, a.postcreationyear, a.posttypeid,a.post_cnt, b.creationyear as usr_creationyear \\\n",
+    "          from tt_year_per_post_cnt_01 a \\\n",
+    "             , users b \\\n",
+    "        where a.usr_id = b.id \\\n",
+    "          and a.posttypeid = '2' \\\n",
+    "              )x \\\n",
+    "        group by x.usr_creationyear, x.usr_id, x.postcreationyear \\\n",
+    "           ) xx \\\n",
+    "group by xx.usr_creationyear, xx.postcreationyear \\\n",
+    "; \\\n",
+    "\" \n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'usr_creationyear' \n",
+    ", 'a_creationyear'\n",
+    ", 'avg_post_cnt' \n",
+    ", 'med_post_cnt' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_usr_a_cre_avg_med.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select x.usr_creationyear,x.posttypeid, x.postcreationyear, sum(post_cnt) as post_cnt \\\n",
+    "  from (select a.usr_id, a.postcreationyear, a.posttypeid,a.post_cnt, b.creationyear as usr_creationyear \\\n",
+    "  from tt_year_per_post_cnt_01 a \\\n",
+    "     , users b \\\n",
+    "where a.usr_id = b.id \\\n",
+    "      )x \\\n",
+    "group by x.usr_creationyear,x.posttypeid, x.postcreationyear \\\n",
+    "; \\\n",
+    "\" \n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'usr_creationyear' \n",
+    ", 'posttypeid'\n",
+    ", 'postcreationyear' \n",
+    ", 'post_cnt' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_usr_post_cre_cnt.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -1330,6 +1537,275 @@
    "source": [
     "# 전체 데이터셋 \n",
     "with open('../../data/df_active_usr_per_day.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select x.vote_creationdate, count(id) as cnt \\\n",
+    "    from ( \\\n",
+    "    select to_char(creationdate, 'yyyy-mm-dd') as vote_creationdate, id \\\n",
+    "      from votes \\\n",
+    "    ) x \\\n",
+    "  group by x.vote_creationdate \\\n",
+    "     ; \\\n",
+    "\" \n",
+    ")\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'vote_creationdate' \n",
+    ", 'cnt' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_vote_cnt_per_day.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select post_creationdate, count(vote_id) as cnt \\\n",
+    "   from (select to_char(a.creationdate, 'yyyy-mm-dd') post_creationdate, b.id as vote_id \\\n",
+    "   from posts a \\\n",
+    "      , votes b \\\n",
+    "     where a.id = b.postid \\\n",
+    "       and b.creationdate - a.creationdate <= '30 days' \\\n",
+    "       and a.posttypeid in ('1', '2') \\\n",
+    " ) x \\\n",
+    " group by post_creationdate \\\n",
+    "     ; \\\n",
+    "\" \n",
+    ")\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'post_creationdate' \n",
+    ", 'cnt' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_vote_cnt_within_1month_per_day.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select post_creationdate, count(vote_id) as cnt \\\n",
+    "   from (select to_char(a.creationdate, 'yyyy-mm-dd') post_creationdate, b.id as vote_id \\\n",
+    "   from posts a \\\n",
+    "      , votes b \\\n",
+    "     where a.id = b.postid \\\n",
+    "       and b.creationdate - a.creationdate <= '30 days' \\\n",
+    "       and a.posttypeid in ('1', '2') \\\n",
+    "       and b.votetypeid in ('2', '3') \\\n",
+    " ) x \\\n",
+    " group by post_creationdate \\\n",
+    "     ; \\\n",
+    "\" \n",
+    ")\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'post_creationdate' \n",
+    ", 'cnt' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_vote_cnt_within_1month_per_day_qna.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select x.post_creationdate, x.posttypeid, count(x.vote_id) as cnt \\\n",
+    "  from (select to_char(a.creationdate, 'yyyy-mm-dd') post_creationdate, b.id as vote_id, a.posttypeid \\\n",
+    "  from posts a \\\n",
+    "    , votes b \\\n",
+    "    where a.id = b.postid \\\n",
+    "      and b.creationdate - a.creationdate <= '30 days' \\\n",
+    "      and a.posttypeid in ('1', '2') \\\n",
+    "      and b.votetypeid in ('2', '3') \\\n",
+    ") x \\\n",
+    "group by x.post_creationdate, x.posttypeid \\\n",
+    "; \\\n",
+    "\" \n",
+    ")\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'post_creationdate' \n",
+    ", 'posttypeid' \n",
+    ", 'vote_cnt'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_vote_cnt_within_1month_per_daytype_qna.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)"
    ]
   },
