--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1808,6 +1808,79 @@
     "with open('../../data/df_vote_cnt_within_1month_per_daytype_qna.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select date, posttypeid, count(*) as cnt \\\n",
+    "  from (select to_char(creationdate, 'yyyy-mm-dd') as date, posttypeid , id \\\n",
+    "  from posts \\\n",
+    ") x \\\n",
+    "group by date, posttypeid \\\n",
+    "  ; \\\n",
+    "\" \n",
+    ")\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'post_creationdate' \n",
+    ", 'posttypeid' \n",
+    ", 'vote_cnt'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_vote_cnt_within_1month_per_daytype_qna.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
